增加查找单聊和群聊的聊天记录

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -752,6 +752,10 @@
             android:name=".modules.home.common.invite.InviteShareActivity"
             android:screenOrientation="portrait"/>
 
+        <activity
+            android:name=".modules.chat.record.ChatRecordActivity"
+            android:screenOrientation="portrait"/>
+
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
             <intent-filter android:priority="1000">
