1.fix解散群;2.fix无法分享到QQZONE;3.fix登录界面停留时间;4.优化首页获取会话列表;4.fix当有新的会话到来时，顺序在置顶会话之前

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -761,6 +761,9 @@
         <activity
             android:name=".modules.chat.record.ChatRecordActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.home.find.market.MarketActivity"
+            android:screenOrientation="portrait"/>
 
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
