1.修改group_level参数 2.增加k线图的展示（待完善）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -252,4 +252,5 @@ dependencies {
     //    compile dataDependences.bigGlideImageLoader 内部s使用了glide4.5
     //    compile project(':GlideImageLoader')
     implementation project(':righttopmenu')
+    implementation project(':kchartlib')
 }
