--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -764,6 +764,9 @@
         <activity
             android:name=".modules.home.find.market.MarketActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.home.find.market.details.CurrencyKLineActivity"
+            android:screenOrientation="portrait"/>
 
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
