1.重构对群信息的更新过程，包括群公告，群相册，设置管理员，置顶等。 2.修改移除群成员时，调用所有成员接口（之前是获取缓存的）

--- a/baseproject/src/main/AndroidManifest.xml
+++ b/baseproject/src/main/AndroidManifest.xml
@@ -195,6 +195,17 @@
         </receiver>
 
 
+        <!--配置华为推送-->
+        <meta-data
+            android:name="com.huawei.hms.client.appid"
+            android:value="appid=10492024" />
+        <!-- 接入HMSSDK 需要注册的provider，authorities 一定不能与其他应用一样，所以这边 com.hyphenate.chatuidemo 要替换上您应用的包名-->
+        <provider
+            android:name="com.huawei.hms.update.provider.UpdateProvider"
+            android:authorities="${applicationId}.hms.update.provider"
+            android:exported="false"
+            android:grantUriPermissions="true" />
+
     </application>
 
 </manifest>
