1.修改密码成功后退出重新登录 2.增加钱包管理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -788,6 +788,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".modules.currency.recharge.RechargeCurrencyActivity" />
         <activity android:name=".modules.currency.withdraw.WithdrawCurrencyActivity" />
+        <activity android:name=".modules.currency.address.CurrencyAddressActivity" />
 
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
