绑定手机号+我的团队

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -210,6 +210,9 @@
             android:name=".modules.home.mine.team.MyTeamActivity"
             android:screenOrientation="portrait"/>
         <activity
+            android:name=".modules.home.mine.team.earnings.EarningsDetailActivity"
+            android:screenOrientation="portrait"/>
+        <activity
             android:name=".modules.wallet.rule.WalletRuleActivity"
             android:screenOrientation="portrait"/>
         <activity
