--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -792,6 +792,7 @@
         <activity android:name=".modules.currency.recharge.RechargeCurrencyActivity" />
         <activity android:name=".modules.currency.withdraw.WithdrawCurrencyActivity" />
         <activity android:name=".modules.currency.address.CurrencyAddressActivity" />
+        <activity android:name=".modules.currency.accountbook.AccountBookActivity" />
 
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
