--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -796,13 +796,11 @@
         <activity
             android:name=".modules.settings.password.pay_password.PayPassWordActivity"
             android:screenOrientation="portrait"/>
-        <activity
-            android:name=".modules.settings.password.pay_password.setting_paypassword.SettingPayPasswordActivity"
-            android:screenOrientation="portrait"/>
         <activity android:name=".modules.currency.recharge.RechargeCurrencyActivity" />
         <activity android:name=".modules.currency.withdraw.WithdrawCurrencyActivity" />
         <activity android:name=".modules.currency.address.CurrencyAddressActivity" />
         <activity android:name=".modules.currency.accountbook.AccountBookActivity" />
+        <activity android:name=".modules.currency.interest.CurrencyInterestActivity" />
 
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
