1.fix bug:通讯录用户过多时，点击更多崩溃 2.修改获取群列表，会话列表失败提示 3.获取会话列表方法增加syn同步锁

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -796,11 +796,16 @@
         <activity
             android:name=".modules.settings.password.pay_password.PayPassWordActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".modules.currency.recharge.RechargeCurrencyActivity" />
-        <activity android:name=".modules.currency.withdraw.WithdrawCurrencyActivity" />
-        <activity android:name=".modules.currency.address.CurrencyAddressActivity" />
-        <activity android:name=".modules.currency.accountbook.AccountBookActivity" />
-        <activity android:name=".modules.currency.interest.CurrencyInterestActivity" />
+        <activity android:name=".modules.currency.recharge.RechargeCurrencyActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.currency.withdraw.WithdrawCurrencyActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.currency.address.CurrencyAddressActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.currency.accountbook.AccountBookActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.currency.interest.CurrencyInterestActivity"
+            android:screenOrientation="portrait"/>
 
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
