1.修改聊天页面（当消息列表不在最后一条时，收到消息后不再主动滑动到底部）2.修改糖果新页面,增加糖果规则列表

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -806,6 +806,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".modules.currency.interest.CurrencyInterestActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".modules.wallet.integration.mine.newIntegration.NewMineIntegrationActivity"
+            android:screenOrientation="portrait"/>
 
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
