--- a/config.gradle
+++ b/config.gradle
@@ -107,7 +107,7 @@ ext {
             magicIndicator               : "com.github.hackware1993:MagicIndicator:1.5.0",
             //robolectric与dagger中间接依赖的冲突，故锁定版本
             guava                        : "com.google.guava:guava:${guavaVwesion}",
-//            clickSpanLink                : "com.klinkerapps:link_builder:${clickSpanLinkVersion}",
+//            clickSpanLink                : "com.klinkerapps:link_build-er:${clickSpanLinkVersion}",
             swipeLayout                  : "com.daimajia.swipelayout:library:1.2.0@aar",
             recyclerviewAnimator         : 'jp.wasabeef:recyclerview-animators:2.2.6',
             jiguangJpush                 : 'cn.jiguang.sdk:jpush:3.0.3',
