--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -811,6 +811,9 @@
         <activity android:name=".modules.chat.card.ChatGroupCardActivity"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".modules.information.flashdetails.FlashDetailsActivity"
+            android:screenOrientation="portrait"/>
+
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
             <intent-filter android:priority="1000">
