1.修改首页，增加新通知页面（未替换）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -636,7 +636,7 @@
 
         <!--系统通知页面-->
         <activity
-            android:name=".modules.home.message.notifacationlist.NotificationActivity"
+            android:name=".modules.home.message.notifacationlist.NotificationListActivity"
             android:screenOrientation="portrait" />
         <!--环信的聊天页面-->
         <activity
