--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -750,7 +750,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".modules.chat.select.addgroup.AddGroupActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|stateUnchanged"  />
         <!--升级群-->
         <activity
             android:name=".modules.home.message.managergroup.maintain.upgradegroup.UpgradeGroupActivity"
