好友申请界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -817,6 +817,9 @@
         <activity android:name=".modules.settings.privacy.SettingPricacyActivity"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".modules.home.mine.friends.verify.VerifyFriendsActivity"
+            android:screenOrientation="portrait"/>
+
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
             <intent-filter android:priority="1000">
