1.完善添加好友流程

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -816,6 +816,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".modules.settings.privacy.SettingPricacyActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".modules.home.message.notification.review.NotificationReviewActivity"
+            android:screenOrientation="portrait"/>
 
         <activity android:name=".modules.home.mine.friends.verify.VerifyFriendsActivity"
             android:screenOrientation="portrait"/>
