1.修复链圈小助手聊天呗屏蔽的bug；2.修复有关好友界面显示异常；3.新增群审核页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -814,12 +814,12 @@
 
         <activity android:name=".modules.information.flashdetails.FlashDetailsActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".modules.settings.privacy.SettingPricacyActivity"
+        <activity android:name=".modules.settings.privacy.SettingPrivacyActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".modules.home.message.notification.review.NotificationReviewActivity"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".modules.home.mine.friends.verify.VerifyFriendsActivity"
+        <activity android:name=".modules.home.mine.friends.verify.VerifyFriendOrGroupActivity"
             android:screenOrientation="portrait"/>
 
         <!-- 开机自启动服务 -->
