1.修复首页视频列表点赞异常；2.资讯视频详情增加点赞和播放量

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -827,6 +827,8 @@
         <activity android:name=".modules.chat.select.community.RelevanceCommunityActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|stateUnchanged"  />
+        <activity android:name=".modules.information.videoinfodetails.VideoInfoDetailsActivity"
+            android:screenOrientation="portrait"/>
 
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
