--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -831,6 +831,10 @@
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"/>
 
+        <activity android:name=".modules.information.videodetails.VideoDetailsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|stateUnchanged"  />
+
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
             <intent-filter android:priority="1000">
