--- a/baseproject/build.gradle
+++ b/baseproject/build.gradle
@@ -29,20 +29,20 @@ android {
                     UMENG_APPKEY  : "5941088daed1797b2200064b", // 友盟三方key配置
                     AMAP_APPKEY   : "37148827c8740aef74fa43485d1cd45e", // 高德三方配置
 //                    AMAP_APPKEY   : "e954e82021efe2f4d334879cff3880cf", // 高德三方配置
-//                    EASEMOB_APPKEY: "1146180531253203#lianquan", // 环信三方配置
-                    EASEMOB_APPKEY: "1146180531253203#lianquandev", // 环信三方配置
+                    EASEMOB_APPKEY: "1146180531253203#lianquan", // 环信三方配置
+//                    EASEMOB_APPKEY: "1146180531253203#lianquandev", // 环信三方配置
             ]
         }
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             // 三方 key
-            manifestPlaceholders = [
+            manifestPlaceholders = [ 
                     TECENT_APPID  : 1106141699, // 腾讯 QQ id
                     UMENG_APPKEY  : "5941088daed1797b2200064b", // 友盟三方key配置
                     AMAP_APPKEY   : "37148827c8740aef74fa43485d1cd45e", // 高德三方配置
-//                    EASEMOB_APPKEY: "1146180531253203#lianquan", // 环信三方配置
-                    EASEMOB_APPKEY: "1146180531253203#lianquandev", // 环信三方配置
+                    EASEMOB_APPKEY: "1146180531253203#lianquan", // 环信三方配置
+//                    EASEMOB_APPKEY: "1146180531253203#lianquandev", // 环信三方配置
             ]
         }
     }
