--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -827,13 +827,13 @@
         <activity android:name=".modules.chat.select.community.RelevanceCommunityActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|stateUnchanged"  />
+
         <activity android:name=".modules.information.videoinfodetails.VideoInfoDetailsActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"/>
 
-        <activity android:name=".modules.information.videodetails.VideoDetailsActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|stateUnchanged"  />
+        <activity android:name=".modules.information.smallvideo.SmallVideoActivity"
+            android:screenOrientation="portrait"/>
 
         <!-- 开机自启动服务 -->
         <receiver android:name=".modules.chat.call.receiver.StartServiceReceiver">
