--- a/baseproject/build.gradle
+++ b/baseproject/build.gradle
@@ -30,7 +30,7 @@ android {
                     AMAP_APPKEY   : "37148827c8740aef74fa43485d1cd45e", // 高德三方配置
 //                    AMAP_APPKEY   : "e954e82021efe2f4d334879cff3880cf", // 高德三方配置
 //                    EASEMOB_APPKEY: "1146180531253203#lianquan", // 环信三方配置
-                    EASEMOB_APPKEY: "1146180531253203#lianquandev", // 环信三方配置
+                    EASEMOB_APPKEY: "1146180531253203#lianquandev", // 环信三方/配置
             ]
         }
         debug {
